--- a/app/src/main/res/values/theme_configurations.xml
+++ b/app/src/main/res/values/theme_configurations.xml
@@ -1,10 +1,10 @@
 <resources>
     <!-- Theme name and author name -->
     <string name="ThemeName">Substratum Template</string>
-    <string name="ThemeAuthor">Projekt Development</string>
+    <string name="ThemeAuthor">Adrian Grimm</string>
     <!-- Your email for bug reports (DEFAULT: empty) -->
     <!--suppress CheckTagEmptyBody -->
-    <string name="ThemeAuthorEmail"></string>
+    <string name="ThemeAuthorEmail">usmcamgrimm@gmail.com</string>
     <!-- Theme wallpaper source (must be raw) -->
     <string name="ThemeWallpaperSource">http://pastebin.com/raw/TG4mFdXz</string>
     <!-- Do your theme support substratum legacy? -->
